--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-openai
-python-dotenv
-mistralai
-python-decouple
+openai==1.31.1
+mistralai==0.4.0
+python-decouple==3.8
 matplotlib==3.7.3
-numpy
-anthropic
-streamlit
-pillow
-joblib
-sqlalchemy
-alembic
-psycopg2-binary
+numpy==1.26.4
+anthropic==0.28.0
+streamlit==1.35.0
+pillow==10.3.0
+joblib==1.4.2
+sqlalchemy==2.0.30
+alembic==1.13.1
+psycopg2-binary==2.9.9
+tiktoken==0.7.0
